--- a/App/Settings/SettingsViewController.xib
+++ b/App/Settings/SettingsViewController.xib
@@ -21,6 +21,7 @@
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K5d-ix-pvD">
                     <rect key="frame" x="16" y="611" width="343" height="40"/>
+                    <accessibility key="accessibilityConfiguration" identifier="LogOutButton"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="lMf-On-qkV"/>
                     </constraints>
@@ -32,6 +33,7 @@
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Qw-NA-7ap">
                     <rect key="frame" x="16" y="36" width="343" height="20.5"/>
+                    <accessibility key="accessibilityConfiguration" identifier="WelcomeLabel"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -39,6 +41,7 @@
             </subviews>
             <viewLayoutGuide key="safeArea" id="D8g-i3-TXb"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <accessibility key="accessibilityConfiguration" identifier="SettingsViewController"/>
             <constraints>
                 <constraint firstItem="2Qw-NA-7ap" firstAttribute="leading" secondItem="D8g-i3-TXb" secondAttribute="leading" constant="16" id="98g-FW-hRr"/>
                 <constraint firstItem="D8g-i3-TXb" firstAttribute="bottom" secondItem="K5d-ix-pvD" secondAttribute="bottom" constant="16" id="9lF-jP-Fq2"/>
